# haskell-in-depth

./: .gitignore  README.md
part-1/stockquotes/: index.html  stockquotes.cabal
part-1/stockquotes/app/: Charts.hs  HtmlReport.hs  Main.hs  Params.hs  QuoteData.hs  StatReport.hs
part-2/5/: genSQL.hs  reader.hs
