cabal-version:      2.4
name:               stockquotes
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Vyacheslav Poplavsky
maintainer:         avalsoff@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable stockquotes
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.13.0.0
                    , text >=1.2 && <1.3
                    , bytestring >=0.10 && <0.11
                    , time >=1.8 && <1.11
                    , fmt >=0.5 && <0.7
                    , colonnade >=1.1 && <1.3
                    , blaze-html >=0.9 && <0.10
                    , blaze-colonnade >=1.1 && <1.3
                    , Chart >=1.8 && <1.10
                    , Chart-diagrams >=1.8 && <1.10
                    , cassava >=0.5 && <0.6
                    , optparse-applicative >=0.14 && <0.16
    hs-source-dirs:   app
    default-language: Haskell2010
